--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_gradient"
-    tools:context="com.artycake.bewarnedandroidsimplevideocall.ui.MainActivity">
+    tools:context="com.getbewarned.connectinterpreter.ui.MainActivity">
 
     <android.support.v7.widget.AppCompatImageButton
         android:id="@+id/call_button"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/call_button_background"
-        android:src="@drawable/ic_call_button"
+        android:src="@drawable/ic_telephone"
         android:tint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -20,36 +20,74 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:text="@string/main_call_to_action"
+        android:id="@+id/call_to_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/call_button"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:lineSpacingMultiplier="1.4"
+        android:text="@string/main_wait_minutes_loading"
+        app:layout_constraintBottom_toTopOf="@+id/call_button"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="40dp"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/user_name_holder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/call_to_action"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp" />
+        <View
+            android:layerType="software"
+            android:layout_width="match_parent"
+            android:background="@drawable/user_name_background"
+            android:layout_height="5dp"/>
+    </LinearLayout>
+
+    <TextView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/test_mode_notification"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/user_name_holder"
+        android:layout_marginBottom="20dp"
+        android:textColor="@android:color/holo_red_dark"
+        android:shadowColor="@android:color/white"
+        tools:layout_editor_absoluteX="8dp" />
+
 
     <TextView
         android:id="@+id/left_label"
-        android:text="@string/main_minutes_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/call_button"
+        android:layout_marginTop="40dp"
+        android:text="@string/main_minutes_left"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="40dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/call_button" />
+
     <TextView
         android:id="@+id/left_value_label"
-        tools:text="10:00"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/left_label"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@android:color/white"
+        android:textSize="50sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@android:color/white"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="50sp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/left_label"
+        tools:text="10:00" />
 
 </android.support.constraint.ConstraintLayout>
