--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,5 +13,6 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
+    <style name="AppTheme.LoaderDialog" parent="Theme.AppCompat.Light.Dialog.Alert"/>
 
 </resources>
