--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
-    <style name="AppTheme.LoaderDialog" parent="Theme.AppCompat.Light.Dialog.Alert"/>
 
+    <style name="AppTheme.LoaderDialog" parent="Theme.AppCompat.Light.Dialog.Alert" />
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
 </resources>
