new functionality. login with number. messages in call. buy unlim with liqpay.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#01579b</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#01579b</color>
-    <color name="colorCallToolbar">#c81e1e1e</color>
+    <color name="colorCallToolbar">#7b1e1e1e</color>
+    <color name="colorFieldHint">#f9f9f9</color>
 </resources>
