--- a/app/src/main/res/drawable/send_button_background.xml
+++ b/app/src/main/res/drawable/send_button_background.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:startColor="#CB356B"
-        android:endColor="#BD3F32"
+        android:startColor="#00a8f9"
+        android:endColor="#0167ad"
         />
-    <corners android:radius="25dp"/>
-    <!--<stroke android:color="@android:color/white" android:width="2dp"/>-->
+    <corners android:radius="20dp"/>
+    <stroke android:color="@android:color/white" android:width="2dp"/>
 </shape>
