--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,89 +7,111 @@
     android:background="@drawable/blue_gradient"
     tools:context="com.getbewarned.connectinterpreter.ui.MainActivity">
 
-    <android.support.v7.widget.AppCompatImageButton
-        android:id="@+id/call_button"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@drawable/call_button_background"
-        android:src="@drawable/ic_telephone"
-        android:tint="@android:color/white"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/AppTheme.Toolbar" />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/available_holder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-    <TextView
-        android:id="@+id/call_to_action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:gravity="center"
-        android:lineSpacingMultiplier="1.4"
-        android:text="@string/main_wait_minutes_loading"
-        app:layout_constraintBottom_toTopOf="@+id/call_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/user_name_holder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/call_to_action"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        <android.support.v7.widget.AppCompatImageButton
+            android:id="@+id/call_button"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/call_button_background"
+            android:src="@drawable/ic_telephone"
+            android:tint="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/user_name"
+            android:id="@+id/call_to_action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
             android:gravity="center"
-            android:textSize="20sp" />
+            android:lineSpacingMultiplier="1.4"
+            android:text="@string/main_wait_minutes_loading"
+            app:layout_constraintBottom_toTopOf="@+id/call_button"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
 
-        <View
+        <TextView
+            android:id="@+id/left_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="@string/main_minutes_left"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/call_button" />
+
+        <TextView
+            android:id="@+id/left_value_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@android:color/white"
+            android:textSize="50sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/left_label"
+            tools:text="10:00" />
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/not_available_holder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/not_available_desc"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/user_name_background"
-            android:layerType="software" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="@string/not_available_desc" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/buy_unlim"
+            style="@style/AppTheme.BlueButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="@string/buy_unlim_btn"
+            android:theme="@style/AppTheme.BlueButton"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/not_available_desc" />
+    </android.support.constraint.ConstraintLayout>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:background="@android:color/holo_red_dark"
         android:gravity="center"
         android:padding="5dp"
         android:shadowColor="@android:color/white"
         android:text="@string/test_mode_notification"
-        app:layout_constraintBottom_toTopOf="@+id/user_name_holder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:layout_editor_absoluteX="8dp" />
 
-
-    <TextView
-        android:id="@+id/left_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="@string/main_minutes_left"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/call_button" />
-
-    <TextView
-        android:id="@+id/left_value_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:textColor="@android:color/white"
-        android:textSize="50sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/left_label"
-        tools:text="10:00" />
 
 </android.support.constraint.ConstraintLayout>
