--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,15 @@
                 android:gravity="center"
                 android:text="@string/login_title" />
 
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/country"
+                android:layout_marginTop="10dp"
+                style="@style/AppTheme.EditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:theme="@style/AppTheme.EditText" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -72,6 +81,26 @@
                     android:theme="@style/AppTheme.EditText" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/accept"
+                android:layout_width="match_parent"
+                android:layout_marginTop="16dp"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.AppCompatCheckBox
+                    android:id="@+id/accept_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/accept_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorFieldHint"
+                    android:textColorLink="@android:color/white"
+                    android:padding="5dp" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/get_code_button"
@@ -81,14 +110,6 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/action_continue"
                 android:theme="@style/AppTheme.BlueButton" />
-
-            <TextView
-                android:id="@+id/login_hint"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/login_code_helper"
-                android:textColor="@android:color/white" />
 
         </LinearLayout>
     </ScrollView>
