--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
         android:gravity="center"
         android:padding="5dp"
         android:shadowColor="@android:color/white"
-        android:text="@string/test_mode_notification"
+        android:text="@string/work_time_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
