--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -98,12 +98,13 @@
         android:id="@+id/work_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_red_dark"
+        android:background="#ff17a471"
         android:gravity="center"
         android:padding="5dp"
         android:shadowColor="@android:color/white"
         android:layout_marginTop="?attr/actionBarSize"
         android:text="@string/work_time_info"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
