--- a/app/src/main/res/drawable/call_button_background.xml
+++ b/app/src/main/res/drawable/call_button_background.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:startColor="#00a8f9"
-        android:endColor="#0167ad"
+        android:startColor="#01fdbe"
+        android:endColor="#005e43"
         />
     <corners android:radius="75dp"/>
     <stroke android:color="@android:color/white" android:width="5dp"/>
