--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -77,5 +77,14 @@
             android:layout_gravity="center_horizontal"
             android:textColor="@android:color/darker_gray"
             android:text="@string/wrong_number" />
+
+        <TextView
+            android:layout_marginTop="40dp"
+            android:id="@+id/need_help"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@android:color/darker_gray"
+            android:text="@string/need_help" />
     </LinearLayout>
 </ScrollView>
