--- a/app/src/main/res/layout/app_bar_drawer.xml
+++ b/app/src/main/res/layout/app_bar_drawer.xml
@@ -6,9 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.getbewarned.connectinterpreter.ui.MainActivity">
 
+    <include layout="@layout/content_drawer" />
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="0dp"
         android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -19,6 +22,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_drawer" />
+
 
 </android.support.design.widget.CoordinatorLayout>
