added max volume for call. added share button

--- a/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -13,6 +13,9 @@
             android:id="@+id/drawer_utog"
             android:title="@string/drawer_utog" />
         <item
+            android:id="@+id/drawer_share"
+            android:title="@string/drawer_share" />
+        <item
             android:id="@+id/drawer_exit"
             android:title="@string/drawer_exit" />
     </group>
