--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="colorAccent">#01579b</color>
     <color name="colorCallToolbar">#7b1e1e1e</color>
     <color name="colorFieldHint">#01579b</color>
-
+    <color name="qrScannerBackground">#AA01579b</color>
+    <color name="colorRed">#BD3F32</color>
 
     <item name="visible" type="id" />
     <item name="masked" type="id" />
