--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,11 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="AppTheme.RedButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="backgroundTint">@color/colorRed</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
     <style name="AppTheme.BlueButton.Borderless" parent="Widget.AppCompat.Button.Borderless.Colored">
         <item name="android:textColor">@color/colorPrimary</item>
@@ -39,9 +44,10 @@
 
     <style name="AppTheme.LoaderDialog" parent="Theme.AppCompat.Light.Dialog.Alert" />
 
-    <style name="AppTheme.Toolbar" parent="Widget.AppCompat.Toolbar">
+    <style name="AppTheme.Toolbar" parent="Theme.AppCompat">
         <item name="actionMenuTextColor">@android:color/white</item>
-        <item name="elevation">0dp</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
