tons of updates

--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -7,7 +7,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/connect_interpreter_icon_blank"/>
+            android:src="@drawable/logo_blank"/>
     </item>
 
 </layer-list>
