--- a/app/src/main/res/layout/activity_group_session.xml
+++ b/app/src/main/res/layout/activity_group_session.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.GroupSessionActivity">
 
     <LinearLayout
+        android:id="@+id/video_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -16,8 +17,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <FrameLayout
@@ -37,8 +38,8 @@
 
         <FrameLayout
             android:id="@+id/asker_container"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/blue_gradient"
             android:visibility="gone" />
