--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textViewStyle">@style/AppTheme.TextView</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
@@ -42,6 +43,11 @@
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
+    <style name="AppTheme.TextViewBlack">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
     <style name="AppTheme.LoaderDialog" parent="Theme.AppCompat.Light.Dialog.Alert" />
 
     <style name="AppTheme.Toolbar" parent="Theme.AppCompat">
@@ -60,5 +66,10 @@
     </style>
 
     <style name="AppTheme.NoActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="PreferencesTheme" parent="AppTheme.NoActionBar">
+        <item name="android:textViewStyle">@style/AppTheme.TextViewBlack</item>
+    </style>
+
 
 </resources>
