start new ui of confirmation screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,9 @@
 
     <item name="visible" type="id" />
     <item name="masked" type="id" />
+
+<!--    new ui-->
+    <color name="white">#FFFFFF</color>
+    <color name="red_new_ui">#C91518</color>
+
 </resources>
