--- a/app/src/main/res/layout/activity_confirmation_v2.xml
+++ b/app/src/main/res/layout/activity_confirmation_v2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_dark"
-    android:paddingTop="32dp"
+    android:paddingTop="48dp"
     tools:context="com.getbewarned.connectinterpreter.ui.ConfirmationActivity">
 
     <LinearLayout
@@ -17,22 +17,21 @@
         android:paddingBottom="@dimen/activity_vertical_margin">
 
         <TextView
+            style="@style/Text_default"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/confirmation_title"
-            android:textColor="@color/white"
             android:textSize="22sp" />
 
 
         <EditText
             android:id="@+id/code"
+            style="@style/EditText_rounded"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/rounded_background"
             android:gravity="center"
             android:hint="@string/enter_confirmation_code"
             android:inputType="number"
