--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -99,14 +99,16 @@
         <item name="android:textSize">52sp</item>
     </style>
 
-    <style name="ActionItem_FAB" parent="EditText_rounded">
-        <item name="android:layout_width">72dp</item>
-        <item name="android:layout_height">72dp</item>
-        <item name="elevation">@dimen/default_elevation</item>
-        <item name="android:clipToPadding">false</item>
-        <item name="android:clipChildren">false</item>
-        <item name="android:scaleType">center</item>
-        <item name="android:paddingBottom">8dp</item>
+    <style name="ActionItem_72" parent="EditText_rounded">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/circle_action_main_screen</item>
+    </style>
+
+    <style name="ActionItem_Call" parent="EditText_rounded">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/circle_call</item>
     </style>
 
 
