--- a/app/src/main/res/layout/layout_share.xml
+++ b/app/src/main/res/layout/layout_share.xml
@@ -10,14 +10,13 @@
 
     <ImageView
         android:id="@+id/iv_share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ActionItem_ActionsScreen"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/ic_share_new_ui"
         app:layout_constraintBottom_toTopOf="@+id/tv_share"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_share_new_ui" />
 
     <TextView
         android:id="@+id/tv_share"
