--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,11 +72,23 @@
         <item name="android:textViewStyle">@style/AppTheme.TextViewBlack</item>
     </style>
 
+
     <!--new ui-->
     <style name="Text_default">
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Text_toolbar" parent="Text_default">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Text_news_item_title">
+        <item name="android:textColor">@android:color/holo_blue_dark</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="EditText_rounded">
